# filewatch-signaler

./: Cargo.toml  Dockerfile  env
src/: main.rs
